Final change to Text and layout of Vegan Alternative page

--- a/Charlottespage.html
+++ b/Charlottespage.html
@@ -47,133 +47,128 @@
     </div>
   </section>
 
-  <div class="album py-5 bg-light">
-    <div class="container">
-        <div class="col-mb-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="d-block w-100" src="Milk.jpg" alt="Milk" style="width:100%; height:225px;">
-            <div class="card-body">
-              <p class="card-text">1. Milk - Popular non-dairy milks include oat, hazelnut, cashew, soy, almond and hemp. Non- dairy milks are fairy accessible now in large supermarket stores. </p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="https://www.google.com/search?biw=500&bih=709&tbm=shop&ei=mAPjXJLYFePDxgOvsrDIBA&q=non+dairy+milk&oq=non+dairy+milk&gs_l=psy-ab.3..0l5.2464.8226.0.8544.23.17.0.5.5.0.159.859.14j1.15.0....0...1c.1.64.psy-ab..4.19.835....0.ugHfz_QWblQ" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</button>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="card mb-4 shadow-sm">
+          <img class="d-block w-100" src="Milk.jpg" alt="Milk" style="width:100%; height:225px;">
+          <div class="card-body">
+            <p class="card-text">1. Milk - Popular non-dairy milks include oat, hazelnut, cashew, soy, almond and hemp. Due to the large number of substitute ingredients, non dairy milks can be widely found in supermarkets. Non-dairy milk is completely free of cholesterol and even lower in calories than dairy-based milk! </p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <a href="https://www.google.com/search?biw=500&bih=709&tbm=shop&ei=mAPjXJLYFePDxgOvsrDIBA&q=non+dairy+milk&oq=non+dairy+milk&gs_l=psy-ab.3..0l5.2464.8226.0.8544.23.17.0.5.5.0.159.859.14j1.15.0....0...1c.1.64.psy-ab..4.19.835....0.ugHfz_QWblQ" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</a>
               </div>
-            </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="d-block w-100" src="Yogurt.jpg" alt="Yogurt" style="width:100%; height:225px;">
-            <div class="card-body">
-              <p class="card-text">2. Non Dairy Yogurts- While plant-based ‘gurts are lactose-free, they’re also brimming with healthy fats coming from the bases they’re crafted with— think soy, nuts, and coconut.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=1gTjXO7RLdWg1fAP4NO7yAY&q=non+dairy+yogurts&oq=non+dairy+yogurts&gs_l=psy-ab.3..0.2917.12109.0.12258.17.9.0.8.8.0.51.426.9.9.0....0...1c.1.64.psy-ab..0.17.461....0.RSsGqpuL0ukQ" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="d-block w-100" src="Butter.jpg" alt="Butter" style="width:100%; height:225px;">
-            <div class="card-body">
-              <p class="card-text">3. Butter - As well as vegan butters available, margerine serves as an excellent alternative to butter to use on toast, sandwiches and to spread lovingly atop scones and crumpets.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=2ATjXL3KKOOH1fAPsIWw6As&q=margarine&oq=margarine&gs_l=psy-ab.3..0l10.1881.3062.0.3851.4.4.0.0.0.0.122.252.3j1.4.0....0...1c.1.64.psy-ab..0.2.88....0.t0ev04QDSGI" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</button>
-                </div>
+      </div>
+      </div>
+      <div class="col">
+        <div class="card mb-4 shadow-sm">
+          <img class="d-block w-100" src="Yogurt.jpg" alt="Yogurt" style="width:100%; height:225px;">
+          <div class="card-body">
+            <p class="card-text">2. Non Dairy Yogurts- While plant-based ‘gurts are lactose-free, they’re also brimming with healthy fats coming from the bases they’re crafted with— think soy, nuts, and coconut.</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=1gTjXO7RLdWg1fAP4NO7yAY&q=non+dairy+yogurts&oq=non+dairy+yogurts&gs_l=psy-ab.3..0.2917.12109.0.12258.17.9.0.8.8.0.51.426.9.9.0....0...1c.1.64.psy-ab..0.17.461....0.RSsGqpuL0ukQ" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</a>
               </div>
-            </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="d-block w-100" src="DarkChocolate.jpg" alt="DarkChocolate" style="width:100%; height:225px;">
-            <div class="card-body">
-              <p class="card-text"> 4. Dark Chocolate - Pure dark chocolate is rich in antioxidants and is a great milk chocolate replacement for non-dairy desserts. </p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=AAXjXIeOF9-Y1fAPwLSWqAY&q=dark+chocolate&oq=Dark+cho&gs_l=psy-ab.1.0.0l10.25526.29277.0.32071.24.22.0.0.0.0.124.1536.18j3.21.0....0...1c.1.64.psy-ab..9.15.904....0.ndlbDi8eHpE" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</button>
-                </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="d-block w-100" src="Mushrooms.jpg" alt="Mushrooms.jpg" style="width:100%; height:225px;">
-            <div class="card-body">
-              <p class="card-text">5. Mushrooms- Crimini, Shiitake, Portobello, and Oyster mushrooms all have a juicy hearty texture that is perfect for replacing meat. Ground into veggie burgers or charred on the grill, mushrooms are a succulent substitution for meat in any form.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=IQXjXJT6DM2n1fAPw5e0uAg&q=mushroom&oq=mushroom&gs_l=psy-ab.3..0l10.23612.24631.0.25638.8.4.0.4.4.0.87.273.4.4.0....0...1c.1.64.psy-ab..0.8.291....0.XlRf1417MK0" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</button>
-                </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="d-block w-100" src="Aquafaba.jpg" alt="Aquafaba.jpg" style="width:100%; height:225px;">
-            <div class="card-body">
-              <p class="card-text"> 6. Aquafaba - The water from a can of chickpeas is a superb substitute for egg white. It can used to make meringues, mousses and lots of bakes like macarons, sponges and brownies. It can even be a central ingredient in dairy free batter and sauces like mayonnaise. </p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=OwXjXL38MeyV1fAPkp6isAY&q=Aquafaba&oq=Aquafaba&gs_l=psy-ab.3..0l10.22888.22888.0.23259.1.1.0.0.0.0.158.158.0j1.1.0....0...1c.2.64.psy-ab..0.1.158....0.S3C5YnmcTVo" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="d-block w-100" src="Jackfruit.jpg" alt="Jackfruit.jpg" style="width:100%; height:225px;">
-            <div class="card-body">
-              <p class="card-text">7. Jackfruit - Jackfruit may be a healthy tropical fruit, but its texture and mild taste make it a wonderful stand-in for meat.  It can be used to make pulled “pork” or BBQ jackfruit.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=VAXjXPHoAdel1fAPyIOruAo&q=Jackfruit&oq=Jackfruit&gs_l=psy-ab.3..0l10.36748.36748.0.37109.1.1.0.0.0.0.77.77.1.1.0....0...1c.2.64.psy-ab..0.1.76....0.wW843jjh2Dg" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</button>
-                </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="d-block w-100" src="Avocado.jpg" alt="Avocado.jpg" style="width:100%; height:225px;">
-            <div class="card-body">
-              <p class="card-text">8. Avocados- This nutrient-dense fruit can add a creamy body and boost of flavor to almost anything. Avocados can be added to pesto sauce as a substitute for cheese or whipped up as a spread for sandwiches.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=eQXjXKXnNbKQ1fAPu9uD0AM&q=Avocado&oq=Avocado&gs_l=psy-ab.3..0l10.22317.22317.0.22657.1.1.0.0.0.0.59.59.1.1.0....0...1c.2.64.psy-ab..0.1.59....0.-ZRYUMojQRk" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</button>
-                </div>
-                <small class="text-muted">9 mins</small>
+      </div>
+      </div>
+      <div class="col">
+        <div class="card mb-4 shadow-sm">
+          <img class="d-block w-100" src="Butter.jpg" alt="Butter" style="width:100%; height:225px;">
+          <div class="card-body">
+            <p class="card-text">3. Butter - As well as vegan butters available, margerine serves as an excellent alternative to butter to use on toast, sandwiches and to spread lovingly atop scones and crumpets.</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=2ATjXL3KKOOH1fAPsIWw6As&q=margarine&oq=margarine&gs_l=psy-ab.3..0l10.1881.3062.0.3851.4.4.0.0.0.0.122.252.3j1.4.0....0...1c.1.64.psy-ab..0.2.88....0.t0ev04QDSGI" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</a>
               </div>
-            </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="d-block w-100" src="Tofu.jpg" alt="Tofu.jpg" style="width:100%; height:225px;">
-            <div class="card-body">
-              <p class="card-text">9. Tofu- Tofu can be sliced, diced, or cubed to achieve a meaty consistency. For best results, freeze a package of tofu, and then defrost in the refrigerator overnight.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=kQXjXKqnGNif1fAPwNy10A0&q=tofu&oq=tofu&gs_l=psy-ab.3..0l10.1951.2436.0.2711.4.4.0.0.0.0.88.282.4.4.0....0...1c.1.64.psy-ab..0.4.280....0.mA8o9z5Gwe8" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</button>
-                </div>
-                <small class="text-muted">9 mins</small>
+      </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="card mb-4 shadow-sm">
+          <img class="d-block w-100" src="DarkChocolate.jpg" alt="Dark Chocolate" style="width:100%; height:225px;">
+          <div class="card-body">
+            <p class="card-text">4. Dark Chocolate - Pure dark chocolate is rich in antioxidants and is a great milk chocolate replacement for non-dairy desserts. </p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=AAXjXIeOF9-Y1fAPwLSWqAY&q=dark+chocolate&oq=Dark+cho&gs_l=psy-ab.1.0.0l10.25526.29277.0.32071.24.22.0.0.0.0.124.1536.18j3.21.0....0...1c.1.64.psy-ab..9.15.904....0.ndlbDi8eHpE" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</a>
               </div>
-            </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-          <img class="d-block w-100" src="Flaxseed.jpg" alt="Flaxseed.jpg" style="width:100%; height:225px;">
-            <div class="card-body">
-              <p class="card-text">10. Flaxseed - This nutritious seed is packed with antioxidants and can also be used as a vegan egg substitute in baking and cooking when ground. Ground flaxseed emulates eggs’ binding qualities in breads, cakes, muffins, cookies, burgers, and vegan meatballs.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=tQXjXKGrK_aM1fAPnfCxmAc&q=Flaxseed+&oq=Flaxseed+&gs_l=psy-ab.3..0l10.11424.12235.0.12525.4.4.0.0.0.0.48.171.4.4.0....0...1c.1j2.64.psy-ab..0.4.170....0.cJaEhxL8R7s" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</button>
-                </div>
-            </div>
+      </div>
+      </div>
+      <div class="col">
+        <div class="card mb-4 shadow-sm">
+          <img class="d-block w-100" src="Mushrooms.jpg" alt="Mushrooms" style="width:100%; height:225px;">
+          <div class="card-body">
+            <p class="card-text">5. Mushrooms- Crimini, Shiitake, Portobello, and Oyster mushrooms all have a juicy hearty texture that is perfect for replacing meat. Ground into veggie burgers or charred on the grill, mushrooms are a succulent substitution for meat in any form.</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=IQXjXJT6DM2n1fAPw5e0uAg&q=mushroom&oq=mushroom&gs_l=psy-ab.3..0l10.23612.24631.0.25638.8.4.0.4.4.0.87.273.4.4.0....0...1c.1.64.psy-ab..0.8.291....0.XlRf1417MK0" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</a>
+              </div>
           </div>
         </div>
+      </div>
+      </div>
+      <div class="col">
+        <div class="card mb-4 shadow-sm">
+          <img class="d-block w-100" src="Aquafaba.jpg" alt="Aquafaba" style="width:100%; height:225px;">
+          <div class="card-body">
+            <p class="card-text">6. Aquafaba - The water from a can of chickpeas is a superb substitute for egg white. It can used to make meringues, mousses and lots of bakes like macarons, sponges and brownies. It can even be a central ingredient in dairy free batter and sauces like mayonnaise. </p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=OwXjXL38MeyV1fAPkp6isAY&q=Aquafaba&oq=Aquafaba&gs_l=psy-ab.3..0l10.22888.22888.0.23259.1.1.0.0.0.0.158.158.0j1.1.0....0...1c.2.64.psy-ab..0.1.158....0.S3C5YnmcTVo" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</a>
+              </div>
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="card mb-4 shadow-sm">
+          <img class="d-block w-100" src="Jackfruit.jpg" alt="Jackfruit" style="width:100%; height:225px;">
+          <div class="card-body">
+            <p class="card-text">7. Jackfruit - Jackfruit may be a healthy tropical fruit, but its texture and mild taste make it a wonderful stand-in for meat.  It can be used to make pulled “pork” or BBQ jackfruit.</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=VAXjXPHoAdel1fAPyIOruAo&q=Jackfruit&oq=Jackfruit&gs_l=psy-ab.3..0l10.36748.36748.0.37109.1.1.0.0.0.0.77.77.1.1.0....0...1c.2.64.psy-ab..0.1.76....0.wW843jjh2Dg" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</a>
+              </div>
+          </div>
+        </div>
+      </div>
+      </div>
+      <div class="col">
+        <div class="card mb-4 shadow-sm">
+          <img class="d-block w-100" src="Avocado.jpg" alt="Avacado" style="width:100%; height:225px;">
+          <div class="card-body">
+            <p class="card-text">8. Avocados- This nutrient-dense fruit can add a creamy body and boost of flavor to almost anything. Avocados can be added to pesto sauce as a substitute for cheese or whipped up as a spread for sandwiches.</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=eQXjXKXnNbKQ1fAPu9uD0AM&q=Avocado&oq=Avocado&gs_l=psy-ab.3..0l10.22317.22317.0.22657.1.1.0.0.0.0.59.59.1.1.0....0...1c.2.64.psy-ab..0.1.59....0.-ZRYUMojQRk" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</a>
+              </div>
+          </div>
+        </div>
+      </div>
+      </div>
+      <div class="col">
+        <div class="card mb-4 shadow-sm">
+          <img class="d-block w-100" src="Aquafaba.jpg" alt="Aquafaba" style="width:100%; height:225px;">
+          <div class="card-body">
+            <p class="card-text">9. Tofu- Tofu can be sliced, diced, or cubed to achieve a meaty consistency. For best results, freeze a package of tofu, and then defrost in the refrigerator overnight.</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <a href="https://www.google.com/search?biw=973&bih=709&tbm=shop&ei=kQXjXKqnGNif1fAPwNy10A0&q=tofu&oq=tofu&gs_l=psy-ab.3..0l10.1951.2436.0.2711.4.4.0.0.0.0.88.282.4.4.0....0...1c.1.64.psy-ab..0.4.280....0.mA8o9z5Gwe8" button type="button" class="btn btn-sm btn-outline-secondary">Buy yours here</a>
+              </div>
+          </div>
+        </div>
+      </div>
       </div>
     </div>
   </div>
