--- a/About.html
+++ b/About.html
@@ -34,7 +34,7 @@
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">Our Mission</a>
+          <a class="nav-link" href="About.html">Our Mission</a>
         <li class="nav-item">
           <a class="nav-link" href="TorysPage.html">Food for Thought</a>
         </li>
