--- a/Charlottespage.html
+++ b/Charlottespage.html
@@ -32,7 +32,7 @@
         <li class="nav-item">
           <a class="nav-link" href="Charlottespage.html">Vegan Ingredients & Alternatives</a>
         <li class="nav-item">
-            <a class="nav-link" href="Anysiaspage.html">10 Top Tips</a>
+            <a class="nav-link" href="AnysiaspageFINAL.html">10 Top Tips</a>
       </ul>
     </div>
   </nav>
